# graduation-project

./: .gitignore  README.md
docs/: jetson-workspace.md
jetson/: run_autodrive.sh  setup_jetson_shell.sh
jetson/catkin_ws/src/magni_nav/: CMakeLists.txt  package.xml
jetson/catkin_ws/src/magni_nav/cmake/: magni_navConfig.cmake
jetson/catkin_ws/src/magni_nav/launch/: hardware.launch  jetson_autodrive.launch  move_base.launch  navigation.launch  serial.launch
jetson/catkin_ws/src/magni_nav/maps/: map_final1.yaml  map_final1_cropped.pgm  map_final1_cropped.yaml
jetson/catkin_ws/src/magni_nav/param/: base_local_planner_param.yaml  costmap_common_param.yaml  global_costmap_param.yaml  local_costmap_param.yaml
jetson/catkin_ws/src/magni_nav/rviz/: magni_nav.rviz
jetson/catkin_ws/src/magni_nav/scripts/: check_nav_frames.py  navi.py  rotate_360.py
jetson/catkin_ws/src/magni_nav/src/: odom_publisher.py
stm/: main.cpp
