<?xml version="1.0"?>
<package format="2">
  <name>magni_nav</name>
  <version>0.6.1</version>
  <description>The magni_nav package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fiducial_slam</exec_depend>
  <exec_depend>aruco_detect</exec_depend>
  <exec_depend>move_basic</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- We implicitly depend on raspicam_node too -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
